# jira-cli

./: LICENSE  TODO.md  main.py  pyproject.toml
