[tool.poetry]
name = "jira-cli"
version = "1.0.0"
description = ""
authors = ["Christofer Pak <christoferpak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
